--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -20,7 +20,6 @@ padding: 10px 10px 10px 10px;
 
 .info {
 
-    height:200px;
     width: 300px;
     font-size: auto;
     padding: 10px 10px 10px 10px;
@@ -28,7 +27,7 @@ padding: 10px 10px 10px 10px;
 }
 
 #map { 
-    width: 80%; 
+    width: 900px; 
 	height: 550px;
     margin: auto; 
 	background: white; 
@@ -63,7 +62,6 @@ padding: 10px 10px 10px 10px;
 {
     border: 1px black;
     margin: 10px;
-    width: 50px;
     display: inline-block;  
 }
 
@@ -94,3 +92,14 @@ padding: 10px 10px 10px 10px;
     border-radius: 0px 3px 3px 0px;
 }
 
+#container
+{
+    margin: 10px auto 10px auto;
+    width:940px;
+}
+
+#header
+{
+    text-align:center;
+    margin: 10px auto 10px auto;
+}
