--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -17,79 +17,48 @@ border: auto;
 padding: 10px 10px 10px 10px;
 }
 
-
-.info {
-
-    width: 300px;
-    font-size: auto;
-    padding: 10px 10px 10px 10px;
-
-}
-
 #map { 
     width: 900px; 
 	height: 550px;
     margin: auto; 
 	background: white; 
+    -moz-box-shadow: 0 0 20px black; 
+    -webkit-box-shadow: 0 0 20px black; 
     box-shadow: 0 0 20px black; 
 	border-radius: 11px;
 }
 #filterTags { border: auto; padding: 20px; }
 
-#filterTags input.search {
-	margin: auto;
-    font-size: 16px;
-    color: #999;
-    padding: 6px;
-    -moz-box-shadow:inset 2px 2px 5px #ccc;
-    box-shadow:inset 2px 2px 5px #ccc;
-    border: 1px solid #b8b8b8;
-}
-#filterTags input.submit {
-    background: url(images/submit.gif) top left no-repeat;
-    width: 67px;
-    height: 32px;
-    border: none;
-    color: #dee4ff;
-    cursor: pointer;
-}
-#filterTags input.submit:hover,
-#filterTags input.submit.hover {
-    background: url(images/submit.gif) bottom left no-repeat;
-}
-
 .tag
 {
-    border: 1px black;
-    margin: 10px;
+    border-width: thin;
+    border-style: outset;
+    border-color: #BEBEBE;
+    margin: 3px;
     display: inline-block;  
+    border-radius: 3px 3px 3px 3px;
+    padding: 1px;
 }
 
-.tags, .close
-{
-
-    border: 5px;
-    padding: 1px 1px 1px 1px;
-    color: #002E63;
-    background: #BCD4E6;
-}
 
 .tags:hover, .close:hover
 {
     background: #F0EAD6;
     cursor: pointer;
+
 }
 
 .tags
 {
-    border: 1px black;
-    border-radius: 3px 0px 0px 3px;
-    border: 2px black;
+    border-right-width: thin;
+    border-right-color: black;
+    background: #C0C0C0;
 }
 
 .close
 {
-    border-radius: 0px 3px 3px 0px;
+
+     background: #F0EAD6;
 }
 
 #container
@@ -103,4 +72,33 @@ padding: 10px 10px 10px 10px;
 {
     text-align:center;
     margin: 10px auto 10px auto;
+}
+
+
+.info {
+
+    text-align: left;
+    width: 280px;
+    font-size: auto;
+    padding: 10px 10px 10px 10px;
+    border-radius: 11px;
+
+}
+#div0{
+    border-width: thin;
+    border-style: inset;
+    border-color: #BEBEBE;
+    height:100px;
+    overflow:auto;
+
+}
+#div1{
+    float: left;
+}
+#div2{
+    float: right;
+}
+#div3{
+    float: right;
+    clear: :left;
 }
